--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <div class = "trialcontainer">
                 <p class = "trialinfo">
-                    Try it for free 7 days <span>then $20/mo. thereafter</span>
+                    Try it for free 7 days <span>then <span>&#36</span>20/mo. thereafter</span>
                 </p>
             </div>
             <div class = "formsandtext">
